--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "mocha": "^10.0.0",
     "mongoose": "^6.3.6",
+    "nodemon": "^2.0.18",
     "nyc": "^15.1.0"
   },
   "devDependencies": {
